--- a/ui-recipevault/public/index.html
+++ b/ui-recipevault/public/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <!-- used as 'environment' variables, when we going to deploy to OpenShift-->
+<script src="env-config.js" type="text/javascript"></script>
+<!-- used as 'environment' variables, when we going to deploy to OpenShift-->
   </head>
   <body>
     <noscript>
